<resources>
    <string name="app_name">CookHooK</string>
    <string name="next_button">Display Next Direction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear All</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_hint">Password (6 or more characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="remember_text">Remember Me</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
